Name:               whenever
Version:            0.0.1
Synopsis:           A language that processes instructions whenever.
Description:        Whenever is an esoteric programming language, created by
                    David Morgan-Mar, which has no sense of urgency. It does
                    things whenever it feels like it, not in any sequence
                    specified by the programmer.
Homepage:           http://dangermouse.net/esoteric/whenever.html
License:            GPL
License-File:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4.6 && < 5
                    , containers >= 0.5 && < 0.6
                    , transformers >= 0.3 && < 0.4
                    , random >= 1.0 && < 1.1
                    , array >= 0.4 && < 0.5
  Exposed-modules:  Language.Whenever
                    Language.Whenever.Base
                    Language.Whenever.Scan
                    Language.Whenever.Parse
                    Language.Whenever.Unparse
  hs-source-dirs:   src
  ghc-options:      -Wall

Executable whenever
  Build-Depends:    base >= 4.6 && < 5
                    , whenever
  Main-Is:          whenever.hs

Source-Repository head
  type:             git
  location:         http://github.com/mtolly/whenever
