Name:               whenever
Version:            0.1
Synopsis:           A language that processes instructions whenever.
Description:        Whenever is an esoteric programming language, created by
                    David Morgan-Mar, which has no sense of urgency. It does
                    things whenever it feels like it, not in any sequence
                    specified by the programmer.
Homepage:           http://dangermouse.net/esoteric/whenever.html
License:            GPL
License-File:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
Cabal-Version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4.6 && < 5
                    , containers >= 0.5 && < 0.6
                    , transformers >= 0.3 && < 0.4
                    , random >= 1.0 && < 1.1
                    , array >= 0.4 && < 0.6
                    , text >= 0.11 && < 0.12
  Exposed-Modules:  Language.Whenever
                    Language.Whenever.Base
                    Language.Whenever.Scan
                    Language.Whenever.Parse
                    Language.Whenever.Unparse
  Hs-Source-Dirs:   src
  Ghc-Options:      -Wall

Executable whenever
  Build-Depends:    base >= 4.6 && < 5
                    , whenever
  Main-Is:          whenever.hs

Source-Repository head
  Type:             git
  Location:         http://github.com/mtolly/whenever
